# concurrency-theory

./: README.md
Dependency_Analysis_Tool/: README.md  dat.py  requirements.txt
Dependency_Analysis_Tool/inputs/: test1
Dependency_Analysis_Tool/libs/: dependency_graph.py  dependency_matrix.py  file_input_parser.py  fnf_determinator.py
Dependency_Analysis_Tool/modules/: dependency_graph.py  dependency_matrix.py  file_input_parser.py
Dependency_Analysis_Tool/outputs/: test1_graph.dot
Thread_Dependency_Analysis_Tool/: README.md  dependency_graph.py  dependency_matrix.py  file_input_parser.py  fnf_determinator.py  main.py  requirements.txt
Thread_Dependency_Analysis_Tool/libs/: dependency_graph.py  dependency_matrix.py  file_input_parser.py
Thread_Dependency_Analysis_Tool/outputs/: graph.dot
Thread_Dependency_Analysis_Tool/setup/: setup.py
concurrency_theory_labs/: settings.gradle
concurrency_theory_labs/src/main/results_lab04/: ARBITER_10.csv  ARBITER_100.csv  ARBITER_25.csv  ASYMMETRIC_10.csv  ASYMMETRIC_100.csv  ASYMMETRIC_25.csv  BOTH_10.csv  BOTH_100.csv  BOTH_25.csv  MODIFIED_ARBITER_10.csv  MODIFIED_ARBITER_100.csv  MODIFIED_ARBITER_25.csv  script.gn  script_compare.gp
homeworks/Concurrent_Gaussian_Eliminator/: .gitignore  README.md  REPORT.md  cge.py  config.py  gedat.py  requirements.txt  run.py
homeworks/Concurrent_Gaussian_Eliminator/input/: checker.txt  sample2.txt  sample3.txt
homeworks/Dependency_Analysis_Tool/: .gitignore  README.md  dat.py
labs/lab9/: CMakeLists.txt  a.out  func.c  main.c  mat.c
(+49 files in other folders)
